force-app/main/default/objects/BMCServiceDesk__Data_Integrity_Information__c/BMCServiceDesk__Data_Integrity_Information__c.object-meta.xml
<CustomObject>
    <description>This object stores details about records that are impacted by other deleted, modified, or unused records in BMC Remedyforce.</description>
    <label>Data Integrity Information</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Integrity Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>