force-app/main/default/objects/BMCServiceDesk__Data_Integrity_Information__c/fields/BMCServiceDesk__Description__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Description__c</fullName>
    <description>Provides details about the modified or deleted field value in an impacted record.</description>
    <label>Scan Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>