force-app/main/default/objects/BMCServiceDesk__Data_Integrity_Information__c/fields/BMCServiceDesk__Impacted_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Impacted_Field_Name__c</fullName>
    <description>Stores the name of the field with modified or deleted values in the impacted record.</description>
    <label>Impacted Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>