force-app/main/default/objects/BMCServiceDesk__Data_Integrity_Information__c/fields/BMCServiceDesk__Impacted_Record__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Impacted_Record__c</fullName>
    <description>Stores the record whose fields contain modified or deleted values that are referred from another object.</description>
    <label>Impacted Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>