force-app/main/default/objects/BMCServiceDesk__Data_Integrity_Information__c/fields/BMCServiceDesk__ImpactedModule__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ImpactedModule__c</fullName>
    <description>Stores the module that contains a record that is impacted by other modified, deleted, or unused records in BMC Remedyforce.</description>
    <label>Impacted Module</label>
    <length>255</length>
    <type>Text</type>
</CustomField>