force-app/main/default/objects/BMCServiceDesk__Data_Integrity_Information__c/fields/BMCServiceDesk__ScanId__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ScanId__c</fullName>
    <description>Stores the unique ID assigned to all impacted records that are found during a scan.</description>
    <label>ScanId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>