force-app/main/default/objects/BMCServiceDesk__Data_Integrity_Information__c/fields/BMCServiceDesk__Severity__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Severity__c</fullName>
    <description>Error is displayed when the missing field value and ID are not found in the referred from object or a lookup field value is NULL. Warning is displayed when only the missing field value is not found in the referred from object.</description>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
                <default>true</default>
                <label>Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>